--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@
 						</script>
 					<div class="side-bottom">
 						<div class="copyright">
-							<p>Copyright © 2017 兰宁儿</p>
+							<p>Copyright © 2017 镜听</p>
                             <p> All Rights Reserved </p>
 						</div>
 					</div>
