remove base template's footer part

--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -30,7 +30,7 @@
                       <span class="counter-number-related"></span>
                       <span class="counter-number">{{ data.total_words }}</span>
                     </div>
-                    <div class="counter-label text-uppercase">总单词数</div>
+                    <div class="counter-label text-uppercase">听到的单词数</div>
                   </div>
                 </div>
               </div>
@@ -39,7 +39,7 @@
               <div class="widget">
                 <div class="widget-content padding-25 bg-blue-600">
                   <div class="counter counter-lg counter-inverse">
-                    <div class="counter-label text-uppercase">总观看视频数</div>
+                    <div class="counter-label text-uppercase">观看视频数</div>
                     <span class="counter-number">{{ data.total_videos }}</span>
                   </div>
                 </div>
