--- a/templates/flask_user/login.html
+++ b/templates/flask_user/login.html
@@ -2,79 +2,107 @@
 
 {% block head %}
 {{ super() }}
-<style>
-    input[type=submit] {
-    padding:5px 15px;
-    float: right;
-    border:0 none;
-    cursor:pointer;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-}
+<link rel="stylesheet" href="./../static/login/css/style.css" type="text/css" media="all">
+{% endblock %}
 
-</style>
+{% block nav %}
+
 {% endblock %}
 
 {% block content %}
 {% from "flask_user/_macros.html" import render_field, render_checkbox_field, render_submit_field %}
-<h1>{%trans%}登录{%endtrans%}</h1>
 
-<form action="" method="POST" class="form " role="form" style="width:30%;">
+<h1>欢迎回来</h1>
+<div class="login_container">
+
+		<div class="login_image">
+			<img src="./../static/login/images/web.jpg" alt="">
+		</div>
+
+		<div class="aitsloginwthree login_layout font">
+
+            <h2>{%trans%}登录{%endtrans%}</h2>
+
+<form action="" method="POST">
+
     {{ form.hidden_tag() }}
 
     {# Username or Email field #}
     {% set field = form.username if user_manager.enable_username else form.email %}
-    <div class="form-group {% if field.errors %}has-error{% endif %}">
-        {# Label on left, "New here? Register." on right #}
-        <div class="row">
-            <div class="col-xs-6">
-                <label for="{{ field.id }}" class="control-label">邮件地址</label>
-            </div>
-            <div class="col-xs-6 text-right">
-                {% if user_manager.enable_register and not user_manager.require_invitation %}
-                    <a href="{{ url_for('user.register') }}" tabindex='190'>
-                        {%trans%}没有账号，注册？{%endtrans%}</a>
-                {% endif %}
-            </div>
-        </div>
-        {{ field(class_='form-control', tabindex=110) }}
-        {% if field.errors %}
-            {% for e in field.errors %}
-                <p class="help-block">{{ e }}</p>
-            {% endfor %}
-        {% endif %}
-    </div>
+    <!--<div class="form-group {% if field.errors %}has-error{% endif %}">-->
+        <!--{# Label on left, "New here? Register." on right #}-->
+        <!--<div class="row">-->
+            <!--<div class="col-xs-6">-->
+                <!--<label for="{{ field.id }}" class="control-label">邮件地址</label>-->
+            <!--</div>-->
+            <!--<div class="col-xs-6 text-right">-->
+                <!--{% if user_manager.enable_register and not user_manager.require_invitation %}-->
+                    <!--<a href="{{ url_for('user.register') }}" tabindex='190'>-->
+                        <!--{%trans%}没有账号，注册？{%endtrans%}</a>-->
+                <!--{% endif %}-->
+            <!--</div>-->
+        <!--</div>-->
+        {{ field(class_='', placeholder="邮箱", tabindex=110) }}
+
+        <!--{% if field.errors %}-->
+            <!--{% for e in field.errors %}-->
+                <!--<p class="help-block">{{ e }}</p>-->
+            <!--{% endfor %}-->
+        <!--{% endif %}-->
+    <!--</div>-->
 
     {# Password field #}
-    {% set field = form.password %}
-    <div class="form-group {% if field.errors %}has-error{% endif %}">
-        {# Label on left, "Forgot your Password?" on right #}
-        <div class="row">
-            <div class="col-xs-6">
-                <label for="{{ field.id }}" class="control-label">密码</label>
-            </div>
-            <div class="col-xs-6 text-right">
-                {% if user_manager.enable_forgot_password %}
-                    <a href="{{ url_for('user.forgot_password') }}" tabindex='195'>
-                        {%trans%}忘记密码？{%endtrans%}</a>
-                {% endif %}
-            </div>
-        </div>
-        {{ field(class_='form-control', tabindex=120) }}
-        {% if field.errors %}
-            {% for e in field.errors %}
-                <p class="help-block">{{ e }}</p>
-            {% endfor %}
-        {% endif %}
-    </div>
+    <!--{% set field = form.password %}-->
+    <!--<div class="form-group {% if field.errors %}has-error{% endif %}">-->
+        <!--{# Label on left, "Forgot your Password?" on right #}-->
+        <!--<div class="row">-->
+            <!--<div class="col-xs-6">-->
+                <!--<label for="{{ field.id }}" class="control-label">密码</label>-->
+            <!--</div>-->
+            <!--<div class="col-xs-6 text-right">-->
+                <!--{% if user_manager.enable_forgot_password %}-->
+                    <!--<a href="{{ url_for('user.forgot_password') }}" tabindex='195'>-->
+                        <!--{%trans%}忘记密码？{%endtrans%}</a>-->
+                <!--{% endif %}-->
+            <!--</div>-->
+        <!--</div>-->
+        {{ field(class_='', placeholder="密码", tabindex=120) }}
+        <!--{% if field.errors %}-->
+            <!--{% for e in field.errors %}-->
+                <!--<p class="help-block">{{ e }}</p>-->
+            <!--{% endfor %}-->
+        <!--{% endif %}-->
+    <!--</div>-->
 
-    {# Remember me #}
-    {% if user_manager.enable_remember_me %}
-    {{ render_checkbox_field(login_form.remember_me, tabindex=130) }}
-    {% endif %}
+
+    <ul class="tick login_layout info">
+					<li>
+                        {# Remember me #}
+                         <input id="remember_me" name="remember_me" type="checkbox" value="y">
+						<label for="remember_me"><span></span>记住我</label>
+					</li>
+					<li>
+						 {% if user_manager.enable_forgot_password %}
+                            <a href="{{ url_for('user.forgot_password') }}" tabindex='195'>
+                                {%trans%}忘记密码？{%endtrans%}
+                            </a>
+                         {% endif %}
+					</li>
+    </ul>
 
     {# Submit button #}
-    {{ render_submit_field(form.submit, tabindex=180) }}
+    <div class="send-button wthree font">
+        {{ render_submit_field(form.submit,  label="登录", tabindex=180) }}
+    </div>
+
 </form>
+</div>
+    <div class="clear"></div>
+</div>
+
+
+	<div class="login_footer">
+		<p> &copy; 2017 镜听. All Rights Reserved</p>
+	</div>
 
 {% endblock %}
