--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,8 @@
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <!--<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>-->
+    <!--<link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>-->
 
     <!-- Plugin CSS -->
     <link href="./../static/home/vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
@@ -83,7 +83,7 @@
                 <h1 id="homeHeading">你最爱的英语听力网站</h1>
                 <hr>
                 <p>开始你的听力之旅！</p>
-                <a href="./../user/sign-in" class="btn btn-success btn-xl">登录</a>
+                <a href="./../user/sign-in?next=/home" class="btn btn-success btn-xl">登录</a>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">了解更多</a>
             </div>
         </div>
