fix directory not right

--- a/templates/index.html
+++ b/templates/index.html
@@ -247,7 +247,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>免注册试用!</h2>
-                <a href="./../home" class="btn btn-default btn-xl sr-button">立即开始!</a>
+                <a href="./../try/home" class="btn btn-default btn-xl sr-button">立即开始!</a>
             </div>
         </div>
     </aside>
